--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cf0ae86e762fcf24797e264f4ed3e26af0f518ce1dd817d3891f117994bdca68"
+  "signature": "sha256:e36545485d46acf2811c8b1a9aaf5a4c0cbc5692ff06e1a24f40fbaf14d2d3e8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -455,6 +455,152 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 37
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def SNR_W(RVCorrMethod = 'PM', thisStarName = 'Giant01', sigmaClip = -1, RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
+      "\n",
+      "    data=np.load('npy/data.npy')\n",
+      "    SNRs=np.load('npy/SNRs.npy')\n",
+      "    if RVCorrMethod=='PM':\n",
+      "        allW = np.load('npy/allW_PM.npy')\n",
+      "    else:\n",
+      "        allW = np.load('npy/allW_DM.npy')        \n",
+      "\n",
+      "    idx = np.where(data[:,0]==thisStarName)[0][0]\n",
+      "\n",
+      "    for cam in range(4):\n",
+      "        \n",
+      "        W = allW[:,cam,idx]\n",
+      "\n",
+      "        thisSNRs = SNRs[:,0,cam]\n",
+      "\n",
+      "        plt.plot(thisSNRs, label= 'SNR')\n",
+      "        plt.plot(W*np.nanmax(thisSNRs), label = 'W')\n",
+      "        plt.legend(loc=0)\n",
+      "        if title=='':\n",
+      "            title ='SNR and W - '+RVCorrMethod+' method - '+data[idx,0]+' - '+labels[cam]+' camera'            \n",
+      "        plt.title(title)\n",
+      "        plt.grid(True)\n",
+      "        plt.savefig(('PM_'+str(cam)))\n",
+      "        plt.show()\n",
+      "\n",
+      "        if booSave==True: \n",
+      "            try:\n",
+      "                plotName = 'plots/SNR_W_'+labels[cam]\n",
+      "                print 'Attempting to save', plotName\n",
+      "                plt.savefig(plotName)\n",
+      "\n",
+      "            except:\n",
+      "                print 'FAILED'\n",
+      "        if booShow==True: plt.show()\n",
+      "        plt.close()        \n",
+      "        "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def RVCorr_RV(RVCorrMethod = 'PM', thisStarName = 'Giant01', sigmaClip = -1, RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
+      "    \n",
+      "    data=np.load('npy/data.npy')\n",
+      "    RVs=np.load('npy/RVs.npy')\n",
+      "    sigmas=np.load('npy/sigmas.npy')\n",
+      "    baryVels=np.load('npy/baryVels.npy')\n",
+      "    JDs=np.load('npy/JDs.npy')\n",
+      "    if RVCorrMethod=='PM':\n",
+      "        RVCorr=np.load('npy/RVCorr_PM.npy')\n",
+      "    else:\n",
+      "        RVCorr=np.load('npy/RVCorr_DM.npy')\n",
+      "\n",
+      "    i = np.where(data[:,0]==thisStarName)[0][0]\n",
+      "#     X = range(data[:,0].shape[0])\n",
+      "#     Y = RVs\n",
+      "#     Y[Y==0.]=np.nan\n",
+      "    \n",
+      "#     if RVClip>-1:Y[np.abs(Y)>RVClip] = np.nan\n",
+      "#     if sigmaClip>-1:\n",
+      "#         stdY= np.std(Y)\n",
+      "#         medY = np.median(Y)\n",
+      "#         Y[(Y>=medY-sigmaClip*stdY) & (Y<=medY+sigmaClip*stdY)] = np.nan\n",
+      "    \n",
+      "    \n",
+      "    \n",
+      "    colors = ['b','g','r','cyan']\n",
+      "    labels = ['Blue','Green','Red','IR']\n",
+      "    \n",
+      "#     #Plots RVs, baryvels. all star, 4 cameras\n",
+      "#     print 'About to plot RVs from ',RVs.shape[0],'stars.'\n",
+      "    \n",
+      "    for cam in range(4)[:]:\n",
+      "        print data[i]\n",
+      "        print 'RV:',RVs[i,:,cam]\n",
+      "        print 'RVCorr:',RVCorr[i,:,cam]\n",
+      "        print 'JDs:',JDs\n",
+      "        RVs[np.abs(RVs)>RVClip] = np.nan\n",
+      "        plt.plot(JDs,RVs[i,:,cam], label = 'RV', marker='.')\n",
+      "        plt.plot(JDs,RVCorr[i,:,cam], label = 'Correction', marker='.')\n",
+      "        plt.plot(JDs,RVs[i,:,cam]-RVCorr[i,:,cam], label = 'Result', marker='.')\n",
+      "\n",
+      "        if booBaryPlot==True: plt.plot(JDs, baryVels, label = 'Barycentric Vel. ', marker='.')\n",
+      "\n",
+      "        plt.legend(loc=0)\n",
+      "\n",
+      "\n",
+      "\n",
+      "#         ax.set_xticklabels(data[:,0])\n",
+      "#         ax.set_xticks(X)\n",
+      "#         plt.xticks(rotation=70)\n",
+      "\n",
+      "\n",
+      "        if title=='':\n",
+      "            plt.title('RVCorr and RV for '+data[i,0]+' - '+labels[cam]+' camera')\n",
+      "        else:\n",
+      "            plt.title(title)\n",
+      "\n",
+      "#         Y[:,:,cam] = Y[:,:,cam][order[:,cam]]\n",
+      "#         YERR[:,:,cam] = YERR[:,:,cam][order[:,cam]]\n",
+      "        \n",
+      "#         #median\n",
+      "#         plt.scatter(X, stats.nanmedian(Y[:,:,cam], axis = 1), label = labels[cam], color = 'k')\n",
+      "        \n",
+      "#         #sigma\n",
+      "#         plt.scatter(X, stats.nanmedian(Y[:,:,cam], axis = 1)+stats.nanstd(Y[:,:,cam], axis = 1), label = labels[cam], color = 'r')\n",
+      "#         plt.scatter(X, stats.nanmedian(Y[:,:,cam], axis = 1)-stats.nanstd(Y[:,:,cam], axis = 1), label = labels[cam], color = 'r')\n",
+      "        \n",
+      "        \n",
+      "#         #min max\n",
+      "#         for star in range(Y.shape[0]):\n",
+      "#             x = np.nanmax(Y[star,:,cam])\n",
+      "#             n = np.nanmin(Y[star,:,cam])\n",
+      "#             plt.plot([star,star],[x,n], color = 'g', lw=2)\n",
+      "#             print star, n, x\n",
+      "        \n",
+      "#         plt.xlabel('MJD')\n",
+      "#         plt.ylabel('RV [m/s]')\n",
+      "\n",
+      "\n",
+      "        if booSave==True: \n",
+      "            try:\n",
+      "                plotName = 'plots/RVCorr_RV_'+labels[cam]\n",
+      "                print 'Attempting to save', plotName\n",
+      "                plt.savefig(plotName)\n",
+      "\n",
+      "            except:\n",
+      "                print 'FAILED'\n",
+      "        if booShow==True: plt.show()\n",
+      "        plt.close()        \n",
+      "        "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
