--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ece7c8975019eb202794dd1a0c98bd47a3c9a24e13d5efdbb1290ff6241a32e1"
+  "signature": "sha256:e6981a96ac3999a6c15922cd41763fc1874a239eb92e08a9b1859eb93fbc780e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -544,12 +544,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def create_allW(data = [], SNRs = []):\n",
+      "def create_allW(data = [], SNRs = [], starSet=[], RVCorrMethod = 'PM'):\n",
       "\n",
       "    if ((data!=[]) and (SNRs!=[])):\n",
+      "#         if ((starSet!=[]) and (len(starSet.shape)==1) and (starSet[0]>0)):\n",
+      "#             data = data[starSet]\n",
+      "#             SNRs = SNRs[starSet]\n",
       "\n",
       "        #load function that translates pivot# to y-pixel  p2y(pivot)=y-pixel of pivot\n",
-      "        p2y = pivot_to_y('/Users/Carlos/Documents/HERMES/reductions/rhoTuc_6.2/0_20aug/1/20aug10042tlm.fits') \n",
+      "        p2y = pivot_to_y('/Users/Carlos/Documents/HERMES/reductions/6.2/rhoTuc_6.2/0_20aug/1/20aug10042tlm.fits') \n",
       "\n",
       "        #gets the y position of for the data array\n",
       "        datay = p2y[data[:,2].astype(float).astype(int)]\n",
@@ -567,9 +570,18 @@
       "\n",
       "                thisSNRs = SNRs[:,0,cam].copy()\n",
       "                thisSNRs[np.isnan(thisSNRs)]=1  #sets NaNs into SNR=1 \n",
-      "\n",
-      "                W = calibrator_weights(deltay,thisSNRs)\n",
+      "                \n",
+      "#                 print deltay,thisSNRs\n",
+      "                if np.sum(thisSNRs)>0:\n",
+      "                    if RVCorrMethod == 'PM':\n",
+      "                        W = calibrator_weights(deltay,thisSNRs)\n",
+      "                    else:\n",
+      "                        W = calibrator_weights2(deltay,thisSNRs)\n",
+      "                        \n",
+      "                else:\n",
+      "                    W = np.zeros(deltay.shape[0]) #hack to fix an all zeros SNRs for failed reductions\n",
       "                allW[:,cam,thisStarIdx] = W\n",
+      "                    \n",
       "    else:\n",
       "        print 'Create allW: Input arrays missing'\n",
       "        allW =[]\n",
@@ -585,14 +597,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def create_RV_corr(RVs, allW, RVClip = 1e17):\n",
-      "    RV_corr = np.zeros(RVs.shape)\n",
+      "def create_RVCorr(RVs, allW, RVClip = 1e17,starSet=[]):\n",
+      "    RVCorr = np.zeros(RVs.shape)\n",
+      "    print 'Clipping to',RVClip\n",
       "    RVs[np.abs(RVs)>RVClip]=0\n",
-      "    for thisStarIdx in range(data.shape[0]):\n",
+      "    \n",
+      "    for thisStarIdx in range(RVs.shape[0]):\n",
       "        for epoch in range(RVs.shape[1]):\n",
-      "            for cam in range(4):\n",
-      "                RV_corr[thisStarIdx,epoch,cam] = np.nansum(allW[:,cam,thisStarIdx]*RVs[:,epoch,cam])\n",
-      "    return RV_corr"
+      "            for cam in range(RVs.shape[2]):\n",
+      "                thisRVCorr = np.nansum(allW[:,cam,thisStarIdx]*RVs[:,epoch,cam])\n",
+      "                RVCorr[thisStarIdx,epoch,cam] = thisRVCorr\n",
+      "                print thisRVCorr,\n",
+      "            print \n",
+      "        print \n",
+      "    return RVCorr"
      ],
      "language": "python",
      "metadata": {},
