--- a/random_tests.ipynb
+++ b/random_tests.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9f1c4472d6f34c21d7403ea8eb003c442fcc41c4dded2c7b656897defe48f0ab"
+  "signature": "sha256:738ad6390d364f766c3b93afb9c47f686c6c3baf448365767eaefa5612c98deb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2543,7 +2543,136 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 210
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# SNRs[:,:,0][SNRs[:,:,0]<1]\n",
+      "SNRs[np.isnan(SNRs)]=0\n",
+      "SNRs+=1e-17\n",
+      "create_allW(data,SNRs)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "KeyboardInterrupt",
+       "evalue": "",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+        "\u001b[0;32m/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/matplotlib/backends/backend_macosx.pyc\u001b[0m in \u001b[0;36mclose\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    381\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    382\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 383\u001b[0;31m         \u001b[0mGcf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdestroy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    384\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    385\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/matplotlib/_pylab_helpers.pyc\u001b[0m in \u001b[0;36mdestroy\u001b[0;34m(num)\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0;31m#print len(Gcf.figs.keys()), len(Gcf._activeQue)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0mmanager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdestroy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m         \u001b[0mgc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+       ]
+      }
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np\n",
+      "import pylab as plt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cd /Users/Carlos/Documents/HERMES/reductions/6.2/HD285507_1arc_6.2/"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/Users/Carlos/Documents/HERMES/reductions/6.2/HD285507_1arc_6.2\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "allW = np.load('npy/allW_DM.npy')\n",
+      "allW[0,:,0][0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "0.0"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "# deltay = np.linspace(0, 4000)\n",
+      "# deltay = np.linspace(-2000, 2000)\n",
+      "# deltay = np.linspace(-4000, 0)\n",
+      "# SNRs = np.ones(50)*30\n",
+      "# SNRs = np.linspace(10, 100)\n",
+      "# SNRs = np.linspace(100, 10)\n",
+      "# W = calibrator_weights2(deltay,SNRs)\n",
+      "\n",
+      "data=np.load('npy/data.npy')\n",
+      "# RVs=np.load('npy/RVs.npy')\n",
+      "SNRs=np.load('npy/SNRs.npy')\n",
+      "allW = np.load('npy/allW_PM.npy')\n",
+      "idx = np.where(data[:,0]=='Giant01')[0]\n",
+      "for cam in range(4):\n",
+      "    W = allW[:,cam,idx]\n",
+      "\n",
+      "    thisSNRs = SNRs[:,0,cam]\n",
+      "\n",
+      "#     plt.plot(deltay/np.max(np.abs(deltay)), label = 'deltay')\n",
+      "    plt.plot(thisSNRs, label= 'SNR')\n",
+      "    plt.plot(W*np.nanmax(thisSNRs), label = 'W')\n",
+      "    plt.legend(loc=0)\n",
+      "    # title = 'PM - deltay '+str(np.min(deltay))+','+str(np.max(deltay))+' - SNR '+str(np.min(SNRs))+','+str(np.max(SNRs))\n",
+      "#     title = 'DM - deltay '+str(np.min(deltay))+','+str(np.max(deltay))+' - SNR '+str(np.min(SNRs))+','+str(np.max(SNRs))\n",
+      "    title = 'PM - cam '+str(cam)+ ' ,' + str(data[idx])\n",
+      "    plt.title(title)\n",
+      "    plt.grid(True)\n",
+      "    plt.savefig(('PM_'+str(cam)))\n",
+      "    plt.show()\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -2554,7 +2683,7 @@
       "    if ((data!=[]) and (SNRs!=[])):\n",
       "\n",
       "        #load function that translates pivot# to y-pixel  p2y(pivot)=y-pixel of pivot\n",
-      "        p2y = RVT.pivot_to_y('/Users/Carlos/Documents/HERMES/reductions/rhoTuc_6.2/0_20aug/1/20aug10042tlm.fits') \n",
+      "        p2y = RVT.pivot_to_y('/Users/Carlos/Documents/HERMES/reductions/6.2//rhoTuc_6.2/0_20aug/1/20aug10042tlm.fits') \n",
       "\n",
       "        #gets the y position of for the data array\n",
       "        datay = p2y[data[:,2].astype(float).astype(int)]\n",
@@ -2567,7 +2696,7 @@
       "\n",
       "            #converts datay into deltay\n",
       "            deltay = datay-datay[thisStarIdx]\n",
-      "            for cam in range(4):\n",
+      "            for cam in range(2):\n",
       "\n",
       "                thisSNRs = SNRs[:,0,cam].copy()\n",
       "                thisSNRs[np.isnan(thisSNRs)]=1  #sets NaNs into SNR=1 \n",
@@ -2575,12 +2704,12 @@
       "                W = calibrator_weights(deltay,thisSNRs)\n",
       "                allW[:,cam,thisStarIdx] = W\n",
       "\n",
-      "        #         order = np.argsort(deltay)\n",
-      "        #         plt.plot(deltay[order], label = 'deltay')\n",
-      "        #         plt.plot(thisSNRs[order], label= 'SNR')\n",
-      "        #         plt.plot((W*np.max(deltay))[order], label = 'W')\n",
-      "        #         plt.legend(loc=0)\n",
-      "        #         plt.show()\n",
+      "                order = np.argsort(deltay)\n",
+      "                plt.plot(deltay[order], label = 'deltay')\n",
+      "                plt.plot(thisSNRs[order], label= 'SNR')\n",
+      "                plt.plot((W*np.max(deltay))[order], label = 'W')\n",
+      "                plt.legend(loc=0)\n",
+      "                plt.show()\n",
       "\n",
       "        # a= pd.DataFrame(deltay)\n",
       "        # # a.columns = labels\n",
@@ -2595,20 +2724,20 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 209
+     "prompt_number": 225
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def create_RV_corr(RVs, allW, RVClip = 1e17):\n",
-      "    RV_corr = np.zeros(RVs.shape)\n",
+      "def create_RVCorr(RVs, allW, RVClip = 1e17):\n",
+      "    RVCorr = np.zeros(RVs.shape)\n",
       "    RVs[np.abs(RVs)>RVClip]=0\n",
       "    for thisStarIdx in range(data.shape[0]):\n",
       "        for epoch in range(RVs.shape[1]):\n",
       "            for cam in range(4):\n",
-      "                RV_corr[thisStarIdx,epoch,cam] = np.nansum(allW[:,cam,thisStarIdx]*RVs[:,epoch,cam])\n",
-      "    return RV_corr"
+      "                RVCorr[thisStarIdx,epoch,cam] = np.nansum(allW[:,cam,thisStarIdx]*RVs[:,epoch,cam])\n",
+      "    return RVCorr"
      ],
      "language": "python",
      "metadata": {},
@@ -2666,7 +2795,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 113
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -2702,7 +2831,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 68
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -2904,8 +3033,82 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a = np."
+      "from os.path import expanduser\n",
+      "home = expanduser(\"~\")"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import os"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [
+      "os.path.expanduser('~')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "'/Users/Carlos'"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = 'dasdf'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "trim(a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'trim' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-8-94da9e635a47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mNameError\u001b[0m: name 'trim' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
