--- a/reduce_2dfdr.ipynb
+++ b/reduce_2dfdr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:793d2fd10149662a9863f8bccdba27c2b2adeb0dc4760e7fcd7caf94dd1e0155"
+  "signature": "sha256:99301c03bca20ce0957b2c55a67792f62b8982883d89fe76b363dff852719961"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -256,12 +256,16 @@
       "                    print time.strftime('%X %x %Z'),'Target folder', self.target_dir,' not empty. Overwrite is off. '\n",
       "                    sys.stdout.flush()\n",
       "                    return False\n",
-      "        os.mkdir(self.target_dir)\n",
-      "        os.mkdir(self.target_dir+'1/')\n",
-      "        os.mkdir(self.target_dir+'2/')\n",
-      "        os.mkdir(self.target_dir+'3/')\n",
-      "        os.mkdir(self.target_dir+'4/')\n",
-      "                \n",
+      "        try:\n",
+      "            os.mkdir(self.target_dir)\n",
+      "            os.mkdir(self.target_dir+'1/')\n",
+      "            os.mkdir(self.target_dir+'2/')\n",
+      "            os.mkdir(self.target_dir+'3/')\n",
+      "            os.mkdir(self.target_dir+'4/')\n",
+      "        except Exception as e: \n",
+      "            print self.target_dir\n",
+      "            print(e)\n",
+      "        \n",
       "        try:\n",
       "            os.mkdir(self.final_dir+'cam1/')\n",
       "            os.mkdir(self.final_dir+'cam2/')\n",
@@ -293,20 +297,20 @@
       "\n",
       "\n",
       "                #flat\n",
-      "                try:\n",
-      "                    os.rmdir(self.target_dir + str(cam+1) + '/' + j[0][:-5]+'_outdir')\n",
-      "                except OSError as ex:\n",
-      "                    if ex.errno == 66:\n",
-      "                        print \"Target folder not empty.\"\n",
-      "                        return False\n",
+      "#                 try:\n",
+      "#                     os.rmdir(self.target_dir + str(cam+1) + '/' + j[0][:-5]+'_outdir')\n",
+      "#                 except OSError as ex:\n",
+      "#                     if ex.errno == 66:\n",
+      "#                         print \"Target folder not empty.\"\n",
+      "#                         return False\n",
       "\n",
-      "                print time.strftime('%X %x %Z'),'      >>Reducing flat'    \n",
-      "                os.mkdir (j[0][:-5]+'_outdir')                   \n",
-      "                os_command =  'drcontrol'\n",
-      "                os_command += ' reduce_fflat ' + j[0]\n",
+      "                print time.strftime('%X %x %Z'),'      >>Reducing tlm'    \n",
+      "#                 os.mkdir (j[0][:-5]+'_outdir')                   \n",
+      "                os_command =  'aaorun'\n",
+      "                os_command += ' make_tlm ' + j[0]\n",
       "    #            if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
       "                os_command += ' -idxfile ' + self.idxFile\n",
-      "                os_command += ' -OUT_DIRNAME '  + j[0][:-5]+'_outdir'\n",
+      "#                 os_command += ' -OUT_DIRNAME '  + j[0][:-5]+'_outdir'\n",
       "                os.system('cleanup')\n",
       "                print '      OS Command '+ os_command\n",
       "                sys.stdout.flush()\n",
@@ -315,22 +319,22 @@
       "\n",
       "\n",
       "                #arc                 \n",
-      "                try:\n",
-      "                    os.rmdir(self.target_dir + str(cam+1) + '/' + j[1][:-5]+'_outdir')\n",
-      "                except OSError as ex:\n",
-      "                    if ex.errno == 66:\n",
-      "                        print \"Target folder not empty.\"\n",
-      "                        return False\n",
+      "#                 try:\n",
+      "#                     os.rmdir(self.target_dir + str(cam+1) + '/' + j[1][:-5]+'_outdir')\n",
+      "#                 except OSError as ex:\n",
+      "#                     if ex.errno == 66:\n",
+      "#                         print \"Target folder not empty.\"\n",
+      "#                         return False\n",
       "\n",
       "                print time.strftime('%X %x %Z'),'      >>Reducing arc'    \n",
       "                sys.stdout.flush()\n",
-      "                os.mkdir(self.target_dir + str(cam+1) + '/' + j[1][:-5]+'_outdir')                   \n",
-      "                os_command =  'drcontrol'\n",
+      "#                 os.mkdir(self.target_dir + str(cam+1) + '/' + j[1][:-5]+'_outdir')                   \n",
+      "                os_command =  'aaorun'\n",
       "                os_command += ' reduce_arc '  + j[1]\n",
       "    #             if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
       "                os_command += ' -idxfile ' + self.idxFile\n",
       "                os_command += ' -TLMAP_FILENAME ' + j[0][:-5] + 'tlm.fits'\n",
-      "                os_command += ' -OUT_DIRNAME ' + j[1][:-5]+'_outdir'\n",
+      "#                 os_command += ' -OUT_DIRNAME ' + j[1][:-5]+'_outdir'\n",
       "                os.system('cleanup')\n",
       "                print '      OS Command '+ os_command\n",
       "                sys.stdout.flush()\n",
@@ -342,12 +346,12 @@
       "                #flat\n",
       "                print time.strftime('%X %x %Z'),'      >>Scrunching flat'    \n",
       "                sys.stdout.flush()\n",
-      "                os_command =  'drcontrol'\n",
+      "                os_command =  'aaorun'\n",
       "                os_command += ' reduce_fflat ' + j[0]\n",
       "                os_command += ' -idxfile ' + self.idxFile\n",
       "    #             if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
       "                os_command += ' -WAVEL_FILENAME ' + j[1][:-5] + 'red.fits'\n",
-      "                os_command += ' -OUT_DIRNAME ' + j[0][:-5]+'_outdir'\n",
+      "#                 os_command += ' -OUT_DIRNAME ' + j[0][:-5]+'_outdir'\n",
       "                os.system('cleanup')\n",
       "                print '      OS Command '+ os_command\n",
       "                sys.stdout.flush()\n",
@@ -417,24 +421,24 @@
       "        #science\n",
       "        obj_files = np.array(j[2:])\n",
       "        for obj in obj_files:\n",
-      "            try:\n",
-      "                os.rmdir(obj[:-5]+'_outdir')\n",
-      "            except OSError as ex:\n",
-      "                if ex.errno == 66:\n",
-      "                    print 'Target folder (', obj[:-5]+'_outdir', 'not empty.'\n",
-      "                    return False\n",
+      "#             try:\n",
+      "#                 os.rmdir(obj[:-5]+'_outdir')\n",
+      "#             except OSError as ex:\n",
+      "#                 if ex.errno == 66:\n",
+      "#                     print 'Target folder (', obj[:-5]+'_outdir', 'not empty.'\n",
+      "#                     return False\n",
       "\n",
       "            print time.strftime('%X %x %Z'),'      >>Reducing science '+ obj                        \n",
       "            sys.stdout.flush()\n",
-      "            os.mkdir(obj[:-5]+'_outdir')                   \n",
-      "            os_command =  'drcontrol'\n",
+      "#             os.mkdir(obj[:-5]+'_outdir')                   \n",
+      "            os_command =  'aaorun'\n",
       "            os_command += ' reduce_object ' + obj\n",
       "            os_command += ' -idxfile ' + self.idxFile\n",
       "            os_command += ' -WAVEL_FILENAME ' + j[1][:-5] + 'red.fits'\n",
       "#                 if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
       "            os_command += ' -TLMAP_FILENAME ' + j[0][:-5] + 'tlm.fits'\n",
       "            os_command += ' -FFLAT_FILENAME ' + j[0][:-5] + 'red.fits'\n",
-      "            os_command += ' -OUT_DIRNAME ' + obj[:-5]+'_outdir'\n",
+      "#             os_command += ' -OUT_DIRNAME ' + obj[:-5]+'_outdir'\n",
       "#                                 os_command += ' -TPMETH OFFSKY'\n",
       "            os.system('cleanup')\n",
       "\n",
@@ -481,7 +485,7 @@
       "                    print j\n",
       "                    \n",
       "                    for obj in j:\n",
-      "                        os_command =  'drcontrol'\n",
+      "                        os_command =  'aaorun'\n",
       "                        os_command += ' reduce_bias ' + obj\n",
       "                        os_command += ' -idxfile ' + idxFile\n",
       "                        os.system('clenaup')\n",
