separated run_2dfdr from datasets

--- a/random_tests.ipynb
+++ b/random_tests.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:738ad6390d364f766c3b93afb9c47f686c6c3baf448365767eaefa5612c98deb"
+  "signature": "sha256:5f800312f051c3f5cac89dd9cc55c6953dbbfc6230263e18a4a2b2dede7b89f1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3108,7 +3108,160 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "#!/opt/local/bin/python\n",
+      "\n",
+      "teststr = 'm67_LR'\n",
+      "\n",
+      "\n",
+      "import reduce_2dfdr \n",
+      "import os\n",
+      "import numpy as np\n",
+      "import sys\n",
+      "import time\n",
+      "\n",
+      "\n",
+      "reduceCam = -1\n",
+      "final_dir =''\n",
+      "\n",
+      "# Any observations\n",
+      "\n",
+      "reduceMode = 'starting_set'\n",
+      "\n",
+      "reduceSet = -1\n",
+      "if len(sys.argv)>1:\n",
+      "    reduceSet = int(sys.argv[1])\n",
+      "    reduceMode = 'single_set'\n",
+      "    if len(sys.argv)>2:\n",
+      "        reduceCam = int(sys.argv[2])\n",
+      "        \n",
+      "    \n",
+      "    \n",
+      "#reduction flags\n",
+      "useBias = False\n",
+      "copyFiles = False\n",
+      "doReduce = True\n",
+      "overwrite = True\n",
+      "idxFile = 'no_flat_no_bias.idx'\n",
+      "startFrom = 3 #number of data set to begin with. 0 for beginning. Good for starting half way through if it cancelled\n",
+      "\n",
+      "\n",
+      "#path to 2dfdr\n",
+      "dr_dir = '/home/staff/mq20101889/2dfdr/6.2/2dfdr_install/bin' #in nut\n",
+      "# dr_dir = '/Users/Carlos/Documents/workspace/2dfdr/6.0/src_code/2dfdr-6.0/bin/' #local\n",
+      "\n",
+      "#target directory. It will copy the data files to sub-directories branching from this directory\n",
+      "target_root = '/home/staff/mq20101889/HERMES/reductions/m67_lr_6.2/' #in nut\n",
+      "# target_root = '/home/staff/mq20101889/HERMES/reductions/test/' #in nut\n",
+      "\n",
+      "#all science reduced (*red.fits) files will be copied to this directory\n",
+      "final_dir = '/home/staff/mq20101889/HERMES/reductions/m67_lr_6.2/'\n",
+      "\n",
+      "#path to data sources\n",
+      "HERMES_data_root = []\n",
+      "HERMES_data_root.append('/home/staff/mq20101889/galah_data/')\n",
+      "HERMES_data_root.append('/home/staff/mq20101889/galah_pilot/')\n",
+      "HERMES_data_root.append('/home/staff/mq20101889/RV_data/')\n",
+      "HERMES_data_root.append('/home/staff/mq20101889/jan14_data/')\n",
+      "HERMES_data_root = np.array(HERMES_data_root)\n",
+      "\n",
+      "#len(date_list) = number of observations (can have more than 1 science file per observation)\n",
+      "date_list = ['131217',\n",
+      "            '131217',\n",
+      "            '131218',\n",
+      "            '140111',\n",
+      "            '140111',\n",
+      "            '140111',\n",
+      "            '140112',\n",
+      "            '140209',\n",
+      "            '140209',\n",
+      "            '140210',\n",
+      "            '140211',\n",
+      "            '140211',\n",
+      "            '140107',\n",
+      "            '140107',\n",
+      "            '140107',\n",
+      "            '140107',\n",
+      "            '140109',\n",
+      "            '140109',\n",
+      "            '140109',\n",
+      "            '140109',\n",
+      "            '140109']\n",
+      "\n",
+      "root_date_link = np.array([1,1,1,1,1,1,1,0,0,0,0,0,3,3,3,3,3,3,3,3,3])\n",
+      "\n",
+      "#Filenumbers for each dataset FLAT_IDX, ARC_IDX, SCIENCE_IDX[S]. Asumes [flat, arc, sci, sci, ...]\n",
+      "ix_array = [[42,43]+range(39,42),\n",
+      "            [47,48]+range(44,47),\n",
+      "            [35,34]+range(30,34),\n",
+      "            [27,26]+range(28,31),\n",
+      "            [32,31]+range(33,36),\n",
+      "            [37,36]+range(38,41),\n",
+      "            [29,28]+range(30,33),\n",
+      "            [27,28]+range(29,32),\n",
+      "            [32,33]+range(34,37),\n",
+      "            [25,26]+range(27,34),\n",
+      "            [11,12]+range(13,19),\n",
+      "            [19,20]+range(21,27),\n",
+      "            [48,47]+range(49,52),\n",
+      "            [53,52]+range(54,57),\n",
+      "            [58,57]+range(59,62),\n",
+      "            [63,62]+[64],\n",
+      "            [29,28]+range(26,28),\n",
+      "            [35,34]+range(30,34),\n",
+      "            [38,37]+[36],\n",
+      "            [47,46]+[45],\n",
+      "            [52,51]+range(48,51)]\n",
+      "\n",
+      "\n",
+      "#adds 2dfdr bi path to PATH variable\n",
+      "os.environ['PATH'] = dr_dir + ':' + os.environ['PATH'] \n",
+      "\n",
+      "#compose absolute path names\n",
+      "source_dir_array = np.core.defchararray.add(HERMES_data_root[root_date_link], [s + '/data/' for s in date_list]) \n",
+      "\n",
+      "#compose file prefixes from date_list\n",
+      "months = np.array(['', 'jan','feb','mar','apr','may','jun','jul','aug','sep','oct','nov','dec'])\n",
+      "d = np.array([s[4:] for s in date_list])\n",
+      "m = months[np.array([s[2:4] for s in date_list]).astype(int)]\n",
+      "filename_prfx = np.core.defchararray.add(d, m)\n",
+      "\n",
+      "#instantiate class\n",
+      "dr2df = reduce_2dfdr.dr2df()\n",
+      "\n",
+      "#pass variables to class\n",
+      "dr2df.dr_dir = dr_dir\n",
+      "dr2df.final_dir = final_dir\n",
+      "dr2df.overwrite = overwrite\n",
+      "dr2df.target_root = target_root\n",
+      "dr2df.reduceMode = reduceMode\n",
+      "dr2df.reduceSet = reduceSet\n",
+      "dr2df.reduceCam = reduceCam\n",
+      "dr2df.idxFile = idxFile\n",
+      "dr2df.copyFiles = copyFiles\n",
+      "dr2df.doReduce = doReduce\n",
+      "dr2df.startFrom = startFrom\n",
+      "\n",
+      "#arrays\n",
+      "dr2df.ix_array = ix_array\n",
+      "dr2df.filename_prfx = filename_prfx\n",
+      "dr2df.date_list = date_list\n",
+      "dr2df.source_dir_array = source_dir_array\n",
+      "     \n",
+      "#run forest, run\n",
+      "\n",
+      "sys.stdout = open(str(startFrom)+str(reduceSet)+'_'+str(time.strftime('%X'))+'.log', 'w')\n",
+      "                  \n",
+      "# print time.strftime('%X %x %Z'), '  Starting reduction'\n",
+      "# dr2df.runReduction()\n",
+      "# print time.strftime('%X %x %Z'), '  Ending reduction'\n",
+      "\n",
+      "# n=0\n",
+      "# for dataset, fileN in zip(filename_prfx, ix_array):\n",
+      "#     for i in fileN[2:]:\n",
+      "#         print str(n)+'_'+str(dataset),'\\t',str(i)\n",
+      "#     n+=1\n"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
