--- a/reduce_2dfdr.ipynb
+++ b/reduce_2dfdr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:99301c03bca20ce0957b2c55a67792f62b8982883d89fe76b363dff852719961"
+  "signature": "sha256:beb3189c3c2ab02a6a49d67076d7544743bf2faa7a1df328c09e80e3ab746eb6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -449,7 +449,10 @@
       "    \n",
       "            print '      Copying '+ obj[:-5]+'red.fits to ' + self.final_dir + 'cam' + str(cam+1) + '/'  \n",
       "            sys.stdout.flush()\n",
-      "            shutil.copyfile(obj[:-5]+'red.fits', self.final_dir + 'cam' + str(cam+1) + '/' + obj[:-5]+'red.fits')\n",
+      "            try:\n",
+      "                shutil.copyfile(obj[:-5]+'red.fits', self.final_dir + 'cam' + str(cam+1) + '/' + obj[:-5]+'red.fits')\n",
+      "            except:\n",
+      "                print '!!!!!!!!!!!!!',obj[:-5]+'red.fits not copied' \n",
       "#                                     shutil.copyfile(obj, '../../cam' +str(cam)+'/'+ obj)\n",
       "    \n",
       "    \n",
